name:                CobaltBlue
version:             2.1
synopsis:            Behavioral Type Checking for Concurrent Objects
homepage:            http://www.di.unito.it/~padovani/Software/CobaltBlue/index.html
license:             GPL-3
license-file:        LICENSE
author:              Luca Padovani
maintainer:          luca.padovani@unito.it
copyright:           (c) 2016-2017 Luca Padovani
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md,
                     README.md,
                     lash64.diff,
                     src/*.hs,
                     src/Presburger/*.hs,
                     src/Presburger/Lash/*.hs,
                     src/Presburger/Z3/*.hs,
                     Makefile,
                     html/Makefile,
                     emacs/cobalt.el,
                     examples/*.cob,
                     errors/*.cob
extra-doc-files:     html/index.html,
                     html/CobaltBlue.css,
                     html/background.jpg,
                     html/Lock.png
cabal-version:       >=1.18

Flag Z3
  Description: Use Z3 solver instead of LASH
  Default:     False

Flag Curses
  Description: Enable NCurses support in the interpreter
  Default:     False

executable CobaltBlue
  main-is:             Main.hs
  other-modules:       Parser,
                       Lexer,
                       Aux,
                       DeadlockAnalysis,
                       Dependencies,
                       Exceptions,
                       Expander,
                       Inference,
                       Language,
                       Presburger.Formula,
                       Render,
                       Runtime,
                       Type
  other-extensions:    CPP,
                       ForeignFunctionInterface

  build-depends:       base >=4.8,
                       containers >=0.5,
                       mtl >=2.2,
                       array >=0.5,
                       time >=1.5,
                       filepath >=1.4,
                       pretty >=1.1,
                       random >=1.1,
                       multiset >=0.3,
                       data-partition >=0.3

  if flag(Z3)
    cpp-options:       -DUSE_Z3
    build-depends:     z3 >=4.1
    other-modules:     Presburger.Z3.Solver
  else
    c-sources:         src/lash_trampoline.c
    include-dirs:      lash/src/lash-core,
                       lash/src/ndd
    ld-options:        lash/lib/lash-core.o
                       lash/lib/lash-arith.o
                       lash/lib/ndd-package.o
    other-modules:     Presburger.Lash.Automaton,
                       Presburger.Lash.Solver

  if flag(Curses)
    cpp-options:       -DHAVE_NCURSES
    build-depends:     hscurses >=1.4

  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
